...
      "entityType": "columns"
    },
    {
      "type": "text",
      "notNull": true,
      "autoincrement": false,
      "default": "'CASH'",
      "generated": null,
      "name": "type",
      "table": "accounts",
      "entityType": "columns"
    },
    {
...
